@startuml
title Diagrama de clases - paquete Vista (basado en los .java provistos)

' Estereotipos para distinguir vistas y controladores externos
skinparam class {
  BackgroundColor<<Vista>> LightBlue
  BackgroundColor<<Controller>> LightGreen
}

' Clases del paquete Vista
class Inicio <<Vista>> {
  - txtCorreo : JTextField
  - txtContraseña : JPasswordField
  + panel1 : JPanel
  - iniciarSesionButton : JButton
  - registrarseButton : JButton
  + Inicio()
}

class RegistroVista <<Vista>> {
  - txtNombre : JTextField
  - txtApellidos : JTextField
  - txtCedula : JTextField
  - txtEdad : JTextField
  - txtDireccion : JTextField
  - txtTelefono : JTextField
  - txtCorreoElectronico : JTextField
  - txtContraseña : JTextField
  - btnRegistrar : JButton
  + panel2 : JPanel
  - inicio : Inicio
  + RegistroVista()
}

class PaginaPrincipal <<Vista>> {
  - panel1 : JPanel
  - btnConsulta : JButton
  - btnHistorico : JButton
  - btnPerfil : JButton
  - btnPagos : JButton
  - lblEmail : JLabel
  - correo : String
  + recibeEmail(email : String) : void
  + PaginaPrincipal()
}

class PaginaPrincipalAdmin <<Vista>> {
  - panel1 : JPanel
  - consultasButton : JButton
  - lblEmail : JLabel
  - correo : String
  + recibeEmailAdmin(email : String) : void
  + PaginaPrincipalAdmin()
}

class ConsultaVista <<Vista>> {
  - txtConsulta : JTextArea
  - btnSubirConsulta : JButton
  - panel1 : JPanel
  - lblEmail : JLabel
  - emailConsulta : String
  + recibeEmail(email : String) : void
  + ConsultaVista()
}

class MostrarConsultaVista <<Vista>> {
  - table1 : JTable
  - panel1 : JPanel
  - lblEmail : JLabel
  - btnConsultar : JButton
  - emailConsulta : String
  + recibeEmail(email : String) : void
  + MostrarConsultaVista()
}

class PagosVista <<Vista>> {
  - txtNumeroTarjeta : JTextField
  - txtNombreTarjeta : JTextField
  - txtFechaVencimiento : JTextField
  - txtSeguridad : JTextField
  - confirmarPagoButton : JButton
  - panel1 : JPanel
  - lblEmail : JLabel
  - correo : String
  + recibeEmailPagos(email : String) : void
  + PagosVista()
}

' Clases del paquete Controllers (externas al paquete Vista)
class Login <<Controller>> {
  + iniciarSesion(correo : String, contraseña : String) : boolean
  + consultarTipoUsu(correo : String, contraseña : String) : String
}

class UsuarioCliente <<Controller>> {
  + Registro(nombre : String, apellido : String, contraseña : String, correoElectronico : String, cedula : int, telefono : String, edad : int, direccion : String) : void
}

class UsuarioAdministrador <<Controller>> {
  + HistoricoConsulta() : ResultSet
}

class Consulta <<Controller>> {
  + consultaCedula(email : String) : int
  + RegistroConsulta(cedula : int, consulta : String) : void
  + consultaTipoUsu(email : String) : String
  + HistoricoConsulta(cedula : int) : ResultSet
}

class Pagos <<Controller>> {
  + registrarPagos(cedula : int, correo : String, nombreTarjeta : String, numeroTarjeta : int, fechaVencimiento : String, seguridad : int) : void
  + actualizarPlan(correo : String) : void
}

' Herencias de JFrame
class JFrame {
}

Inicio --|> JFrame
RegistroVista --|> JFrame
PaginaPrincipal --|> JFrame
PaginaPrincipalAdmin --|> JFrame
ConsultaVista --|> JFrame
MostrarConsultaVista --|> JFrame
PagosVista --|> JFrame

' Relaciones de asociación/dependencia entre vistas
Inicio ..> RegistroVista : <<creates>>
Inicio ..> PaginaPrincipal : <<creates>>
Inicio ..> PaginaPrincipalAdmin : <<creates>>
Inicio ..> Login : <<uses>>

RegistroVista ..> UsuarioCliente : <<uses>>

PaginaPrincipal ..> ConsultaVista : <<creates>>
PaginaPrincipal ..> MostrarConsultaVista : <<creates>>
PaginaPrincipal ..> PagosVista : <<creates>>

PaginaPrincipalAdmin ..> MostrarConsultaVista : <<creates>>

ConsultaVista ..> UsuarioCliente : <<uses>>
ConsultaVista ..> PaginaPrincipal : <<uses>>
ConsultaVista ..> Consulta : <<uses>>

MostrarConsultaVista ..> Consulta : <<uses>>
MostrarConsultaVista ..> UsuarioAdministrador : <<uses>>

PagosVista ..> Consulta : <<uses>>
PagosVista ..> Pagos : <<uses>>

@enduml
